only interface view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="app_register">Don\'t have account? REGISTER</string>
     <string name="app_login">Already have an account? LOGIN</string>
 
+    <string name="school_name">National Institute of Posts, Telecoms and ICT</string>
+    <string name="email">niptict.edu@gmail.com</string>
+    <string name="phone">010 123 456</string>
+    <string name="website">niptict.edu.com.kh</string>
+
 </resources>
